--- a/aircrack/Dockerfile
+++ b/aircrack/Dockerfile
@@ -1,4 +1,10 @@
 FROM alpine:3.8
 
+# aircrack-ng & airmon-ng
 RUN apk add --no-cache aircrack-ng \
  && rm -rf /var/cache/apk/*
+
+# add reaver
+RUN apk add --no-cache \
+      build-base \
+      
